@@ -38,25 +38,29 @@ public class Program {
         int index = employees.indexOf(employees.stream().filter(x-> x.getId() == choice).findFirst().orElse(null));
         if(index == -1){
             System.out.println("Não existe funcionário com esse ID, operação abortada");
-            System.out.println(employees);
-            return;
+        }else{
+            System.out.print("Digite a porcentagem do aumento: ");
+            double percentage = sc.nextDouble();
+            employees.get(index).raise(percentage);
         }
-        System.out.print("Digite a porcentagem do aumento: ");
-        double percentage = sc.nextDouble();
         sc.close();
-        employees.get(index).raise(percentage);
-        System.out.println(employees);
-        employees.removeIf(x -> x.getSalary() > 12000);
         System.out.println(employees);
         List<Employee> under9k = employees.stream().filter(x -> x.getSalary() < 9000).collect(Collectors.toList());
-        List<Employee> above9k = employees.stream().filter(x -> x.getSalary() >= 9000).collect(Collectors.toList());
-        System.out.println("Funcionarios com salário maior que 9k");
-        System.out.println(under9k);
-        System.out.println("Funcionários com salário maior que 9k");
-        System.out.println(above9k);
+        List<Employee> above9k = employees.stream().filter(x -> x.getSalary() >= 9000).collect(Collectors.toList());//Usando apenas o .toList() gera uma lista imutável
+        System.out.println("Funcionarios com salário menor que 9k:");
+        for(Employee x : under9k){
+            System.out.println(x);
+        }
+        System.out.println("Funcionários com salário maior ou igual que 9k:");
+        for(Employee x: above9k){
+            System.out.println(x);
+        }
     }
     public static boolean idTaken(List<Employee> list, int id){
         int isTaken = list.indexOf(list.stream().filter(x-> x.getId() == id).findFirst().orElse(null));
         return isTaken != -1;
+    }
+    public static void removeBySalary(List<Employee> list, double salary){
+        list.removeIf(x -> x.getSalary() > salary);
     }
 }
